--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "hello.js",
   "dependencies": {
-    "fs": "^0.0.2"
+    "fs": "^0.0.2",
+    "request": "^2.73.0",
+    "require": "^2.4.20",
+    "spotify": "^0.3.0",
+    "twitter": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
