--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "hello.js",
   "dependencies": {
     "fs": "^0.0.2",
+    "omdb": "^0.5.0",
     "request": "^2.73.0",
     "require": "^2.4.20",
     "spotify": "^0.3.0",
+    "spotify-search": "0.0.3",
+    "spotify-web-api-node": "^2.3.2",
     "twitter": "^1.3.0"
   },
   "devDependencies": {},
