--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fs": "^0.0.2",
     "omdb": "^0.5.0",
+    "rcb-omdb": "^0.5.2",
     "request": "^2.73.0",
     "require": "^2.4.20",
     "spotify": "^0.3.0",
